[package]
name = "most-urls"
version = "0.1.0"
edition = "2024"

[dependencies]
idna = "1.0.3"
nanoserde = { version = "0.2.1", default-features = false, features = ["std", "json"] }
percent-encoding = "2.3.1"
polars = { version = "0.49.1", features = ["lazy"] }
url = "2.5.4"

[profile.release]
# magic incantations to produce speedier release builds
strip = "symbols"
lto = true
codegen-units = 1
